--- a/ISU_Exercise_3/Programs_for_target/Exercise 3/Makefile
+++ b/ISU_Exercise_3/Programs_for_target/Exercise 3/Makefile
@@ -1,18 +1,22 @@
 CXX=g++
 SOURCES=main.cpp part1.cpp part2.cpp
-OBJECTS=$(SOURCES:.cpp=.o)
+OBJDIR:=host
+OBJECTS:=$(addprefix $(OBJDIR)/,$(SOURCES:.cpp=.o))
 EXECUTABLE=parts
 
 all: $(SOURCES) $(EXECUTABLE)
-	
-$(EXECUTABLE): $(OBJECTS) 
-	$(CXX) $(OBJECTS) -o $@
 
-%.o: %.c
+$(EXECUTABLE): $(OBJECTS)
+	$(CXX) -o $@ $(OBJECTS)
+
+$(OBJDIR)/%.o: %.c
 	$(CXX) -c $< -o $@
 
+$(OBJDIR):
+	@mkdir $(OBJDIR)
+	
 clean : 
-	@rm -rf *o ${EXECUTABLE}
+	@rm $(OBJECTS) ${EXECUTABLE}
 
 help :
 	@echo all clean help $(EXECUTABLE) $(OBJECTS)
