--- a/ISU_Exercise_3/Programs_for_target/Exercise 3/Makefile.target
+++ b/ISU_Exercise_3/Programs_for_target/Exercise 3/Makefile.target
@@ -1,18 +1,23 @@
 CXX=arm-angstrom-linux-gnueabi-g++
 SOURCES=main.cpp part1.cpp part2.cpp
-OBJECTS=$(SOURCES:.cpp=.o)
+DIR:=target/
+OBJECTS:=$(SOURCES:%.cpp=$(DIR)%.o)
 EXECUTABLE=parts.target
 
 all: $(SOURCES) $(EXECUTABLE)
-	
-$(EXECUTABLE): $(OBJECTS) 
-	$(CXX) $(OBJECTS) -o $@
 
-%.o: %.c
+$(EXECUTABLE): $(OBJECTS)
+	$(CXX) -o $(DIR)$@ $(OBJECTS)
+
+$(DIR)%.o: %.cpp $(DIR)
 	$(CXX) -c $< -o $@
 
+$(DIR):
+	@mkdir $(DIR)
+	
 clean : 
-	@rm -rf *o ${EXECUTABLE}
+	@rm $(OBJECTS) $(DIR)${EXECUTABLE}
+	@rmdir $(DIR)
 
 help :
 	@echo all clean help $(EXECUTABLE) $(OBJECTS)
