--- a/ISU_Exercise_4/Exercise_5/Makefile
+++ b/ISU_Exercise_4/Exercise_5/Makefile
@@ -1,23 +1,36 @@
-CXX=arm-angstrom-linux-gnueabi-g++
 SOURCES=Vector.cpp
-DIR=target/
+EXECUTABLE=vector
 LIBRARIES=-pthread
+CFLAGS=-Wall
+###
+ifneq ($(ARCH),target)
+CXX=g++
+DIR=host/
+EXE=$(EXECUTABLE)
+else
+CXX=arm-angstrom-linux-gnueabi-g++
+DIR=target/
+EXE=$(addsuffix .target,$(EXECUTABLE))
+endif
+
 OBJECTS=$(SOURCES:%.cpp=$(DIR)%.o)
-EXECUTABLE=vector.target
 
-all: $(SOURCES) $(EXECUTABLE)
-
-$(EXECUTABLE): $(OBJECTS)
-	$(CXX) -o $@ $(OBJECTS) $(LIBRARIES)
-
+$(EXE): $(OBJECTS)
+	$(CXX) -o $@ $(OBJECTS) $(LIBRARIES) $(DEBUG)
+	
 $(DIR)%.o: %.cpp $(DIR)
-	$(CXX) -c $< -o $@
-
+	$(CXX) $(CFLAGS) -c $< -o $@ 
+	
 $(DIR):
 	@mkdir $(DIR)
 	
-clean : 
-	@rm $(OBJECTS) $(EXECUTABLE)
-
-help :
-	@echo all clean help $(EXECUTABLE) $(OBJECTS)
+clean: 
+	@rm $(OBJECTS) $(EXE)
+	@rmdir $(DIR)
+	
+help:
+	@echo "Instructions for makefile:"
+	@echo "make [OPTIONS]                 make for host"
+	@echo "make ARCH=target [OPTIONS]     make for target"
+	@echo "Options:"
+	@echo "clean          removes objects directory and executable"
