Moved files which were located incorrectly.

--- a/ISU_Exercise_3/Programs_for_target/Exercise_5/Makefile
+++ b/ISU_Exercise_3/Programs_for_target/Exercise_5/Makefile
@@ -1,5 +1,5 @@
-SOURCES=Vector.cpp
-EXECUTABLE=vector
+SOURCES=main.cpp part1.cpp part2.cpp
+EXECUTABLE=parts
 LIBRARIES=-pthread
 CFLAGS=-Wall
 ###
